// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.BlockLayout.Row props testing checkGrammar=false 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkGrammar={false}
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing checkGrammar=true 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkGrammar={true}
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing checkHighlight=false 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkHighlight={false}
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing checkHighlight=true 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkHighlight={true}
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing checkSpaces=false 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkSpaces={false}
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing checkSpaces=true 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkSpaces={true}
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing className="my-classname" 1`] = `
<div
  className="uublocklayout-1lb068w my-classname uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing content="This is Content from ContentMixin" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing content=12345 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.BlockLayout.Row props testing controlled=false 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing controlled=true 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing default props 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing disabled=false 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing disabled=true 1`] = `
<div
  className="uublocklayout-1lb068w uu5-common-disabled uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing dynamic=false 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing dynamic=true 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing ellipsis=false 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing ellipsis=true 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz uublocklayout-17e363w"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing hidden=false 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing hidden=true 1`] = `
<div
  className="uublocklayout-1lb068w uu5-common-hidden uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing id="myId" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="myId"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing ignoreHTML=false 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing ignoreHTML=true 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing mainAttrs=undefined 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing name="myName" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing nestingLevel="bigBox" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing nestingLevel="box" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing nestingLevel="boxCollection" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing nestingLevel="container" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing nestingLevel="inline" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing nestingLevel="page" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing nestingLevel="smallBox" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing nestingLevel="smallBoxCollection" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing nestingLevel="spa" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing noIndex=false 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing noIndex=true 1`] = `
<div
  className="uublocklayout-1lb068w uu5-noindex uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing pureRender=false 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing pureRender=true 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing selected=false 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing selected=true 1`] = `
<div
  className="uublocklayout-1lb068w uu5-common-selected uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing size="m" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing size="s" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz uublocklayout-blivtv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing textCorrector=false 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkGrammar={false}
    checkHighlight={false}
    checkSpaces={false}
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing textCorrector=true 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkGrammar={true}
    checkHighlight={true}
    checkSpaces={true}
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing tooltip="My Tooltip" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing weight="normal" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing weight="primary" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-1s5xk6s"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;

exports[`UU5.BlockLayout.Row props testing weight="secondary" 1`] = `
<div
  className="uublocklayout-1lb068w uublocklayout-fhqrnx"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</div>
`;
